--- a/vultr-deployment/data/package.json
+++ b/vultr-deployment/data/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vultr-deployment",
+  "name": "proxy-pool-vultr-deployment-data",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vultr/vultr-node": "^0.3.1",
-    "node-ssh": "^10.0.2",
-    "proxy-pool": "https://github.com/sech9446/proxy-pool.git",
-    "ssh-keygen": "^0.5.0"
+    "proxy-chain": "^0.4.5"
   }
 }
