--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.19.2",
     "denque": "^1.4.1",
     "proxy-chain": "^0.4.5",
-    "tinyqueue": "^2.0.3"
+    "tinyqueue": "^2.0.3",
+    "tunnel": "0.0.6"
   },
   "jest": {
     "testEnvironment": "node"
