--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
   "name": "proxy-cloud-pool",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "nodejs proxy pool",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "author": "Eunchul",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
+  "files": [
+    "build/src"
+  ],
   "license": "MIT",
-  "dependencies": {
-    "denque": "^1.4.1",
+  "keywords": [],
+  "scripts": {
+    "test": "jest",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
     "proxy-chain": "^0.4.5",
-    "tinyqueue": "^2.0.3",
-    "tunnel": "0.0.6"
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "devDependencies": {
-    "axios": "^0.19.2"
+    "@types/jest": "^26.0.5",
+    "@types/node": "^13.13.14",
+    "@types/tunnel": "0.0.1",
+    "axios": "^0.19.2",
+    "gts": "^2.0.2",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.3",
+    "tunnel": "0.0.6",
+    "typescript": "^3.8.3"
   },
-  "jest": {
-    "testEnvironment": "node"
+  "dependencies": {
+    "denque": "^1.4.1"
   }
 }
